@@ -9,3 +9,7 @@
 
 	o	new R functions "getPlugin" and "registerPlugin" to manage the 
 	plugin system of cxxfunction
+	
+	o	The function package.skeleton (from utils) is made generic and a
+	method is available to generate a package skeleton from a function 
+	generated by cfunction or cxxfunction 
